# kindpath-q

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/standalone/: Main.cpp
core/analysis/: AnalysisResult.h  DynamicAnalyser.cpp  DynamicAnalyser.h  HarmonicAnalyser.cpp  HarmonicAnalyser.h  SegmentBuffer.cpp  SegmentBuffer.h  SpectralAnalyser.cpp  SpectralAnalyser.h  TemporalAnalyser.cpp  TemporalAnalyser.h
core/auth/: UserAuth.cpp  UserAuth.h
core/fingerprints/: EraDetector.cpp  EraDetector.h  FingerprintEngine.cpp  FingerprintEngine.h  FingerprintResult.h  InstrumentDetector.cpp  InstrumentDetector.h  TechniqueDetector.cpp  TechniqueDetector.h
docs/: ARCHITECTURE.md  AUTH.md
plugins/kindpath-q/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/: JuceIncludes.h
ui/: AnalysisPanel.cpp  AnalysisPanel.h  KindPathMainComponent.cpp  KindPathMainComponent.h  LoginComponent.cpp  LoginComponent.h  WaveformView.cpp  WaveformView.h
